--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-select": "^5.7.4",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "sweetalert2": "^11.7.28"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
